add the scene properties to the printed text

--- a/mobileApp/classroom_leds/flutter_todos/lib/l10n/arb/app_en.arb
+++ b/mobileApp/classroom_leds/flutter_todos/lib/l10n/arb/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "todosOverviewAppBarTitle": "Flutter Todos",
+  "todosOverviewAppBarTitle": "Classroom LEDs",
   "@todosOverviewAppBarTitle": {
     "description": "Title text shown in the AppBar of the Todos Overview Page"
   },
